--- a/Designentscheidungen.tex
+++ b/Designentscheidungen.tex
@@ -192,11 +192,11 @@ Wie ist die Philosophie dahinter?
 
 
 \section*{Levels}
-Es sind zwei Levels vorhanden.
+Es sind vier Levels vorhanden.
 Eine Beschreibung der Levels folgt nun.
 
 \subsection*{Rennstrecke für den Rundkurs}
-Warum die Rennstrecke ein extra Model braucht und warum wir sie nicht auf dem Terrain gemacht haben. Warum haben wir uns für ein Canyon in der Wüste (von Arizona?) entschieden? Wie sieht den ein Canyon aus und wie wurde das umgesetzt?
+Warum die Rennstrecke ein extra Model braucht und warum wir sie nicht auf dem Terrain gemacht haben. Wie sieht den ein Canyon aus und wie wurde das umgesetzt? Wie wurde das Terrain generiert oder handmodelliert ? Warum wurde die Strecke gemacht wie sie gemacht wurde -> Evolution von modular zu vollmodelliert. Beschreibung der Streckensettings und ob die Vision jeweils korrekt umgesetzt werden konnte.
 
 \subsection*{Arena}
 Warum ist die Arena wie eine DerbyArena aus FlatOut?
